--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "devDependencies": {
         "gulp": "^3.9.1",
         "gulp-less": "^3.0.5",
+        "gulp-csso": "^1.1.0",
         "gulp-uglify": "^1.5.3",
-        "gulp-concat": "^2.6.0",
+        "gulp-rev": "^7.0.0",
+        "gulp-rev-collector": "^1.0.2",
+        "gulp-clean": "^0.3.2",
         "gulp-watch": "^4.3.5"
     }
 }
