--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
         "gulp-uglify": "^1.5.3",
         "gulp-rev": "^7.0.0",
         "gulp-rev-collector": "^1.0.2",
-        "gulp-clean": "^0.3.2",
-        "gulp-watch": "^4.3.5"
+        "gulp-clean": "^0.3.2"
     }
 }
